// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MCV — searcher-style quoting (no Quoter; eth_call only) NEG set first (ASSET-in derived) — static == exec; snapshots 1`] = `
Object {
  "amountIn": "1000000000000000000",
  "assetToUsdc": true,
  "bundle": Object {
    "hash": "0xe4fad8dbcd195291f239570d5e232f21d6902bc36e5e02c9c2383a17a676e16d",
    "protocol": "mev-share",
  },
  "execution": Object {
    "hops": Array [
      Object {
        "amountIn": "1000000000000000000",
        "amountOut": "990000990000990000",
        "assetToUsdc": true,
        "pool": "0xd8058efe0198ae9dD7D563e1b4938Dcbc86A1F81",
        "tokenIn": "0xDc64a140Aa3E981100a9becA4E685f962f0cF6C9",
        "tokenOut": "0x5FC8d32690cc91D4c39d9d3abcBD16989F875707",
      },
      Object {
        "amountIn": "1000000000000000000",
        "amountOut": "990000990000990000",
        "assetToUsdc": true,
        "pool": "0x6D544390Eb535d61e196c87d6B9c80dCD8628Acd",
        "tokenIn": "0xDc64a140Aa3E981100a9becA4E685f962f0cF6C9",
        "tokenOut": "0x5FC8d32690cc91D4c39d9d3abcBD16989F875707",
      },
    ],
    "userAssetDecrease": "2024000000000000000",
    "userUsdcOut": "1980001980001980000",
  },
  "fees": Object {
    "perHopPools": "10000000000000000",
    "perHopTotal": "12000000000000000",
    "perHopTreasury": "2000000000000000",
  },
  "note": "Searcher chooses NEG orbit (ASSET-in). Quote via provider.call; no Contract.swap() arg walker.",
  "orbit": Array [
    "0xd8058efe0198ae9dD7D563e1b4938Dcbc86A1F81",
    "0x6D544390Eb535d61e196c87d6B9c80dCD8628Acd",
  ],
  "pools": Object {
    "after": Array [
      Object {
        "a": "101010000000000000000",
        "pool": "0xd8058efe0198ae9dD7D563e1b4938Dcbc86A1F81",
        "u": "99009999009999010000",
      },
      Object {
        "a": "101010000000000000000",
        "pool": "0x6D544390Eb535d61e196c87d6B9c80dCD8628Acd",
        "u": "99009999009999010000",
      },
    ],
    "before": Array [
      Object {
        "a": "100000000000000000000",
        "pool": "0xd8058efe0198ae9dD7D563e1b4938Dcbc86A1F81",
        "u": "100000000000000000000",
      },
      Object {
        "a": "100000000000000000000",
        "pool": "0x6D544390Eb535d61e196c87d6B9c80dCD8628Acd",
        "u": "100000000000000000000",
      },
    ],
  },
  "role": "MCV — searcher-quote",
  "routerStatic": "1980001980001980000",
  "usingNeg": true,
}
`;

exports[`MCV — searcher-style quoting (no Quoter; eth_call only) POS set first (USDC-in derived) — static == exec; snapshots 1`] = `
Object {
  "amountIn": "1000000000000000000",
  "assetToUsdc": false,
  "bundle": Object {
    "hash": "0xcebca304c1663e3a3e26b9f2796e268c03d2b34825d2ae75375d4778dc3c2812",
    "protocol": "mev-share",
  },
  "execution": Object {
    "hops": Array [
      Object {
        "amountIn": "1000000000000000000",
        "amountOut": "990000990000990000",
        "assetToUsdc": false,
        "pool": "0xE1F431731306950Ebe34C256DD381913cc71b8d5",
        "tokenIn": "0x851356ae760d987E095750cCeb3bC6014560891C",
        "tokenOut": "0x1613beB3B2C4f22Ee086B2b38C1476A3cE7f78E8",
      },
      Object {
        "amountIn": "1000000000000000000",
        "amountOut": "990000990000990000",
        "assetToUsdc": false,
        "pool": "0xfF33dAF08339Ab237EB75598bf65843FBF25047D",
        "tokenIn": "0x851356ae760d987E095750cCeb3bC6014560891C",
        "tokenOut": "0x1613beB3B2C4f22Ee086B2b38C1476A3cE7f78E8",
      },
    ],
    "userAssetOut": "1980001980001980000",
  },
  "fees": Object {
    "perHopPools": "10000000000000000",
    "perHopTotal": "12000000000000000",
    "perHopTreasury": "2000000000000000",
  },
  "note": "Searcher chooses POS orbit; pool offsets flip after swap. Raw provider.call for quote, raw tx for exec.",
  "orbit": Array [
    "0xE1F431731306950Ebe34C256DD381913cc71b8d5",
    "0xfF33dAF08339Ab237EB75598bf65843FBF25047D",
  ],
  "poolOffsetsFlipped": true,
  "pools": Object {
    "after": Array [
      Object {
        "a": "99009999009999010000",
        "pool": "0xE1F431731306950Ebe34C256DD381913cc71b8d5",
        "u": "101010000000000000000",
      },
      Object {
        "a": "99009999009999010000",
        "pool": "0xfF33dAF08339Ab237EB75598bf65843FBF25047D",
        "u": "101010000000000000000",
      },
    ],
    "before": Array [
      Object {
        "a": "100000000000000000000",
        "pool": "0xE1F431731306950Ebe34C256DD381913cc71b8d5",
        "u": "100000000000000000000",
      },
      Object {
        "a": "100000000000000000000",
        "pool": "0xfF33dAF08339Ab237EB75598bf65843FBF25047D",
        "u": "100000000000000000000",
      },
    ],
  },
  "role": "MCV — searcher-quote",
  "routerStatic": "1980001980001980000",
  "startWith": "POS",
  "usingNeg": false,
}
`;

exports[`MCV — searcher-style quoting (no Quoter; eth_call only) dual-orbit flips: after first call (NEG/ASSET-in) → POS/USDC-in; static & deltas snapshot 1`] = `
Object {
  "bundleHashes": Object {
    "neg": "0x174eb08b351a49a4d9693fe354dcbff43fc2548e6a4232e5d465d94222119b51",
    "pos": "0xd240d9884c619a990eabda03138b722e06e5f4184d931be17917975d3f223bd3",
  },
  "flip": "NEG→POS (searcher chooses)",
  "hops": 2,
  "lastKnownUserBalances": Object {
    "asset": "100000001980001980001980000",
    "usdc": "100000001980001980001980000",
  },
  "note": "Run #2 after flip — POS, USDC-in. Quote/exec via raw ABI; no argument mutation.",
  "poolOffsetsFlipped": true,
  "role": "MCV — searcher-quote",
  "routerStatic": "1980001980001980000",
}
`;
